force-app/main/default/objects/Taxation__mdt/Taxation__mdt.object-meta.xml
<CustomObject>
    <label>Taxation</label>
    <pluralLabel>ARTL_Taxations</pluralLabel>
</CustomObject>