force-app/main/default/objects/Taxation__mdt/fields/ARTL_Installation_GST_Applicable__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Installation_GST_Applicable__c</fullName>
    <label>Installation GST Applicable</label>
    <length>10</length>
    <type>Text</type>
</CustomField>