force-app/main/default/objects/Taxation__mdt/fields/ARTL_Installation_Standard_Reason__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Installation_Standard_Reason__c</fullName>
    <label>Installation Standard Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>