force-app/main/default/objects/Taxation__mdt/fields/ARTL_Taxation__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Taxation__c</fullName>
    <label>Taxation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>