force-app/main/default/objects/Taxation__mdt/listViews/ARTL_View.listView-meta.xml
<ListView>
    <fullName>ARTL_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ARTL_Installation_GST_Applicable__c</columns>
    <columns>ARTL_Installation_Standard_Reason__c</columns>
    <columns>ARTL_Taxation__c</columns>
    <filterScope>Everything</filterScope>
    <label>ARTL View</label>
</ListView>